<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/gris_oscuro">

    <!-- Imagen de perfil -->
    <ImageView
        android:id="@+id/imgPerfil"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/perfil"
        android:contentDescription="@string/perfil_img_desc"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop" />

    <!-- Nombre -->
    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_nombre"
        android:textColor="@color/blanco"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <!-- Apellido -->
    <TextView
        android:id="@+id/txtApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_apellido"
        android:textColor="@color/blanco"
        android:textSize="18sp"
        android:layout_marginBottom="8dp" />

    <!-- Correo Electrónico -->
    <TextView
        android:id="@+id/txtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_correo"
        android:textColor="@color/blanco"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <!-- Teléfono -->
    <TextView
        android:id="@+id/txtTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_telefono"
        android:textColor="@color/blanco"
        android:textSize="16sp"
        android:layout_marginBottom="20dp" />

    <!-- Botón Editar -->
    <Button
        android:id="@+id/btnEditarPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_btn_editar"
        android:textSize="16sp"
        android:textColor="@color/blanco"
        android:background="@drawable/btn_style"
        android:padding="10dp"/>
</LinearLayout>
