<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#424242"
    android:padding="24dp">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:layout_marginBottom="16dp" />

    <!-- Nombre de la App -->
    <TextView
        android:id="@+id/nombre_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_nombre_aplicacion"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <!-- Descripción -->
    <TextView
        android:id="@+id/txt_descriptivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_descripcion_home"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginBottom="24dp" />

    <!-- Botón Comienza -->
    <Button
        android:id="@+id/btnComienza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_home"
        android:textSize="18sp"
        android:textColor="@color/blanco"
        android:background="@drawable/btn_style"
        android:padding="10dp"
        android:layout_marginBottom="10dp" />

    <!-- Texto Registrarse -->
    <TextView
        android:id="@+id/txtRegistrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_registrate_home"
        android:textSize="14sp"
        android:textColor="#A1FF00"
        android:layout_marginTop="10dp"/>
</LinearLayout>
